--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#projects">My projects</a></li>
                     <li><a href="#skills">My skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://instagram.com/qt_coder" target="_empty">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -59,14 +59,18 @@
 
     <section class="featured">
         <div class="left">
-            <div class="inner transition2">
-                <p class="subtitle">Featured Project</p>
-                <a href="#" class="featured-title">qt Maps</a>
+            <a href="https://github.com/qt-coder/qt-maps" target="_empty">
+                <div class="inner transition2">
+                    <p class="subtitle">Featured Project</p>
+                    <a href="https://github.com/qt-coder/qt-maps" class="featured-title" target="_empty">qt Maps</a>
 
-                <p class="featured-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, facere iusto quos nisi repudiandae ipsum.</p>
-            </div>
+                    <p class="featured-desc">This is a Google Maps clone made using the Mapbox API</p>
+                </div>
+            </a>
         </div>
-        <img class="right transition2" src="images/maps.png" alt="qt Maps">
+        <a href="https://qtmaps.netlify.app/" target="_empty">
+            <img class="right transition2" src="images/maps.png" alt="qt Maps">
+        </a>
     </section>
 
     <section class="skills" id="skills">
@@ -77,21 +81,21 @@
                         <img src="images/HTML.png" alt="HTML Icon">
                     </div>
                     <p class="skill-title">HTML</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, dolor?</p>
+                    <p class="featured-desc skill-desc">I am very proficient in HTML, a core building block of the web.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container two">
                         <img src="images/CSS.png" alt="CSS Icon">
                     </div>
                     <p class="skill-title">CSS</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, dolor?</p>
+                    <p class="featured-desc skill-desc">I am familiar with CSS, a programming language used to style the web.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container three">
                         <img src="images/Python.png" alt="Python Icon">
                     </div>
                     <p class="skill-title">Python</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, dolor?</p>
+                    <p class="featured-desc skill-desc">I have a good understanding of Python, a backend language that handles data.</p>
                 </li>
             </ul>
         </div>
@@ -99,36 +103,42 @@
 
     <section class="portfolio" id="projects">
         <div class="portfolio-container transition3">
-            <div class="portfolio-left">
-                <div class="inner">
-                    <div class="subtitle">Google Maps Clone</div>
-                    <div class="featured-title">qt Maps</div>
-                    <div class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, hic.</div>
+            <a href="https://github.com/qt-coder/qt-codepad" target="_empty">
+                <div class="portfolio-left">
+                    <div class="inner">
+                        <div class="subtitle">Live HTML Editor</div>
+                        <div class="featured-title">qt Codepad</div>
+                        <div class="featured-desc">An online code editor with syntax highlighting and a live preview.</div>
+                    </div>
                 </div>
-            </div>
-            <a href="#"><img src="images/maps.png" alt="qt Maps"></a>
+            </a>
+            <a href="https://qtcodepad.netlify.app/" target="_empty"><img src="images/codepad.png" alt="qt Codepad"></a>
         </div>
 
         <div class="portfolio-container transition3">
-            <div class="portfolio-left">
-                <div class="inner">
-                    <div class="subtitle">Google Maps Clone</div>
-                    <div class="featured-title">qt Maps</div>
-                    <div class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, hic.</div>
+            <a href="https://github.com/qt-coder/vue-weather-tracker" target="_empty">
+                <div class="portfolio-left">
+                    <div class="inner">
+                        <div class="subtitle">Weather Tracker</div>
+                        <div class="featured-title">qt Weather</div>
+                        <div class="featured-desc">A weather tracker made in Vue JS using the OpenWeatherMap's API.</div>
+                    </div>
                 </div>
-            </div>
-            <a href="#"><img src="images/maps.png" alt="qt Maps"></a>
+            </a>
+            <a href="https://qtweather.netlify.app/" target="_empty"><img src="images/weather.png" alt="qt Weather"></a>
         </div>
 
         <div class="portfolio-container transition3">
-            <div class="portfolio-left">
-                <div class="inner">
-                    <div class="subtitle">Google Maps Clone</div>
-                    <div class="featured-title">qt Maps</div>
-                    <div class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, hic.</div>
+            <a href="https://github.com/qt-coder/vue_crash_todolist" target="_empty">
+                <div class="portfolio-left">
+                    <div class="inner">
+                        <div class="subtitle">Todo List</div>
+                        <div class="featured-title">qt Todo List</div>
+                        <div class="featured-desc">A todo list app made using the VueJS framework. Emphasizes on backend.</div>
+                    </div>
                 </div>
-            </div>
-            <a href="#"><img src="images/maps.png" alt="qt Maps"></a>
+            </a>
+            <a href="https://qt-todolist.netlify.app" target="_empty"><img src="images/todo.png" alt="qt Weather"></a>
         </div>
     </section>
 
