Added titles to sections

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="#projects">My projects</a></li>
                     <li><a href="#skills">My skills</a></li>
+                    <li><a href="#projects">My projects</a></li>
                     <li><a href="https://instagram.com/qt_coder" target="_empty">Contact</a></li>
                 </ul>
             </nav>
@@ -75,6 +75,7 @@
 
     <section class="skills" id="skills">
         <div class="skills-container">
+            <h1 style="color: #F7F7F7; font-size: 3em;">Skills</h1>
             <ul>
                 <li class="transition2">
                     <div class="icon-container one">
@@ -102,7 +103,8 @@
     </section>
 
     <section class="portfolio" id="projects">
-        <div class="portfolio-container transition3">
+        <h1 style="font-size: 3em; text-align: center;">Projects</h1>
+        <div class="portfolio-container transition3" style="margin-top: 7em;">
             <a href="https://github.com/qt-coder/qt-codepad" target="_empty">
                 <div class="portfolio-left">
                     <div class="inner">
