Improved performance and accessibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <meta name="description" content="qt-coder, a web developer.">
     <title>qt coder</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         </header>
         <div class="social-header">
             <ul>
-                <li><a href="https://github.com/qt-coder" target="_empty"><img src="images/github.png" alt="Github"></a></li>
+                <li><a href="https://github.com/qt-coder" target="_empty" alt="Github"><img src="images/github.webp" alt="Github"></a></li>
             </ul>
         </div>
     </div>
@@ -69,7 +70,7 @@
             </a>
         </div>
         <a href="https://qtmaps.netlify.app/" target="_empty">
-            <img class="right transition2" src="images/maps.png" alt="qt Maps">
+            <img class="right transition2" src="images/maps.webp" alt="qt Maps">
         </a>
     </section>
 
@@ -79,21 +80,21 @@
             <ul>
                 <li class="transition2">
                     <div class="icon-container one">
-                        <img src="images/HTML.png" alt="HTML Icon">
+                        <img src="images/HTML.webp" alt="HTML Icon">
                     </div>
                     <p class="skill-title">HTML</p>
                     <p class="featured-desc skill-desc">I am very proficient in HTML, a core building block of the web.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container two">
-                        <img src="images/CSS.png" alt="CSS Icon">
+                        <img src="images/CSS.webp" alt="CSS Icon">
                     </div>
                     <p class="skill-title">CSS</p>
                     <p class="featured-desc skill-desc">I am familiar with CSS, a programming language used to style the web.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container three">
-                        <img src="images/Python.png" alt="Python Icon">
+                        <img src="images/Python.webp" alt="Python Icon">
                     </div>
                     <p class="skill-title">Python</p>
                     <p class="featured-desc skill-desc">I have a good understanding of Python, a backend language that handles data.</p>
@@ -114,7 +115,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qtcodepad.netlify.app/" target="_empty"><img src="images/codepad.png" alt="qt Codepad"></a>
+            <a href="https://qtcodepad.netlify.app/" target="_empty"><img src="images/codepad.webp" alt="qt Codepad"></a>
         </div>
 
         <div class="portfolio-container transition3">
@@ -127,7 +128,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qtweather.netlify.app/" target="_empty"><img src="images/weather.png" alt="qt Weather"></a>
+            <a href="https://qtweather.netlify.app/" target="_empty"><img src="images/weather.webp" alt="qt Weather"></a>
         </div>
 
         <div class="portfolio-container transition3">
@@ -140,7 +141,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qt-todolist.netlify.app" target="_empty"><img src="images/todo.png" alt="qt Weather"></a>
+            <a href="https://qt-todolist.netlify.app" target="_empty"><img src="images/todo.webp" alt="qt Weather"></a>
         </div>
     </section>
 
