--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="featured">
         <div class="left">
-            <a href="https://github.com/qt-coder/qt-maps" target="_empty">
+            <a href="https://github.com/qt-coder/qt-maps" target="_empty" alt="qt Maps Github">
                 <div class="inner transition2">
                     <p class="subtitle">Featured Project</p>
                     <a href="https://github.com/qt-coder/qt-maps" class="featured-title" target="_empty">qt Maps</a>
@@ -69,7 +69,7 @@
                 </div>
             </a>
         </div>
-        <a href="https://qtmaps.netlify.app/" target="_empty">
+        <a href="https://qtmaps.netlify.app/" target="_empty" alt="qt Maps Live">
             <img class="right transition2" src="images/maps.webp" alt="qt Maps">
         </a>
     </section>
@@ -106,7 +106,7 @@
     <section class="portfolio" id="projects">
         <h1 style="font-size: 3em; text-align: center;">Projects</h1>
         <div class="portfolio-container transition3" style="margin-top: 7em;">
-            <a href="https://github.com/qt-coder/qt-codepad" target="_empty">
+            <a href="https://github.com/qt-coder/qt-codepad" target="_empty" alt="qt Codepad Github">
                 <div class="portfolio-left">
                     <div class="inner">
                         <div class="subtitle">Live HTML Editor</div>
@@ -115,11 +115,11 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qtcodepad.netlify.app/" target="_empty"><img src="images/codepad.webp" alt="qt Codepad"></a>
+            <a href="https://qtcodepad.netlify.app/" target="_empty" alt="qt Codepad Live"><img src="images/codepad.webp" alt="qt Codepad"></a>
         </div>
 
         <div class="portfolio-container transition3">
-            <a href="https://github.com/qt-coder/vue-weather-tracker" target="_empty">
+            <a href="https://github.com/qt-coder/vue-weather-tracker" target="_empty" alt="qt Weather Github">
                 <div class="portfolio-left">
                     <div class="inner">
                         <div class="subtitle">Weather Tracker</div>
@@ -128,11 +128,11 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qtweather.netlify.app/" target="_empty"><img src="images/weather.webp" alt="qt Weather"></a>
+            <a href="https://qtweather.netlify.app/" target="_empty"><img src="images/weather.webp" alt="qt Weather live"></a>
         </div>
 
         <div class="portfolio-container transition3">
-            <a href="https://github.com/qt-coder/vue_crash_todolist" target="_empty">
+            <a href="https://github.com/qt-coder/vue_crash_todolist" target="_empty" alt="qt todolist github">
                 <div class="portfolio-left">
                     <div class="inner">
                         <div class="subtitle">Todo List</div>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://qt-todolist.netlify.app" target="_empty"><img src="images/todo.webp" alt="qt Weather"></a>
+            <a href="https://qt-todolist.netlify.app" target="_empty" alt="qt todolist live"><img src="images/todo.webp" alt="qt Weather"></a>
         </div>
     </section>
 
