Made links more concise

--- a/index.html
+++ b/index.html
@@ -60,14 +60,12 @@
 
     <section class="featured">
         <div class="left">
-            <a href="https://github.com/qt-coder/qt-maps" target="_empty" alt="qt Maps Github">
-                <div class="inner transition2">
-                    <p class="subtitle">Featured Project</p>
-                    <a href="https://github.com/qt-coder/qt-maps" class="featured-title" target="_empty">qt Maps</a>
+            <div class="inner transition2">
+                <p class="subtitle">Featured Project</p>
+                <a href="https://github.com/qt-coder/qt-maps" target="_empty" alt="qt Maps Github">qt Maps</a>
 
-                    <p class="featured-desc">This is a Google Maps clone made using the Mapbox API</p>
-                </div>
-            </a>
+                <p class="featured-desc">This is a Google Maps clone made using the Mapbox API</p>
+            </div>
         </div>
         <a href="https://qtmaps.netlify.app/" target="_empty" alt="qt Maps Live">
             <img class="right transition2" src="images/maps.webp" alt="qt Maps">
