Fixed dumb mistake lol

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="left">
             <div class="inner transition2">
                 <p class="subtitle">Featured Project</p>
-                <a href="https://github.com/qt-coder/qt-maps" target="_empty" alt="qt Maps Github">qt Maps</a>
+                <h1><a href="https://github.com/qt-coder/qt-maps" target="_empty" alt="qt Maps Github">qt Maps</a></h1>
 
                 <p class="featured-desc">This is a Google Maps clone made using the Mapbox API</p>
             </div>
