Added new project

--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
     <section class="portfolio" id="projects">
         <h1 style="font-size: 3em; text-align: center;">Projects</h1>
         <div class="portfolio-container transition3" style="margin-top: 7em;">
+            <a href="https://github.com/qt-coder/qt-music" target="_empty" alt="qt music Github">
+                <div class="portfolio-left">
+                    <div class="inner">
+                        <div class="subtitle">Music Player</div>
+                        <div class="featured-title">qt Music</div>
+                        <div class="featured-desc">A music player made in Vue JS with controls like play/pause, skip, previous etc.</div>
+                    </div>
+                </div>
+            </a>
+            <a href="https://qtcodepad.netlify.app/" target="_empty" alt="qt Codepad Live"><img src="images/codepad.webp" alt="qt Codepad"></a>
+        </div>
+
+        <div class="portfolio-container transition3" style="margin-top: 7em;">
             <a href="https://github.com/qt-coder/qt-codepad" target="_empty" alt="qt Codepad Github">
                 <div class="portfolio-left">
                     <div class="inner">
